Se creó con Colab

--- a/EDA_Apuntes_de_Clase.ipynb
+++ b/EDA_Apuntes_de_Clase.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOaGvZ1+TfAG3/Pz0txJ/Q0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "jV59w_AMJm-Z",
         "collapsed": true,
@@ -647,7 +646,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -673,7 +672,7 @@
       "metadata": {
         "id": "Ra-mhZVbQS0l"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -684,7 +683,7 @@
       "metadata": {
         "id": "1kE2jY4_TcBj"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -701,7 +700,7 @@
           "height": 106
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -726,7 +725,7 @@
           "height": 363
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1090,7 +1089,7 @@
           "height": 206
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1403,7 +1402,7 @@
       "metadata": {
         "id": "Q0rEf255WFSO"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1419,7 +1418,7 @@
           "height": 424
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1845,7 +1844,7 @@
       "metadata": {
         "id": "Du7ji2TPXpYI"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1861,7 +1860,7 @@
           "height": 424
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2291,7 +2290,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2318,7 +2317,7 @@
           "height": 910
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8774,7 +8773,11 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "Creame 2 arreglos y matriz, el primero llamado saldo, que contiene datos sintéticos del saldo bancario, otro arreglo llamado antiguedad que contiene datos de la antiguedad de la cuenta bancaria de 0 a 10, una matriz de dos\n",
+        "columnas que contiene la latitud en la columna 0, y la longitud en la columna 1, con datos muy cercanos a Bucaramanga, es decir que varie la latitud y longitud en decimales o centecimales. El número de datos son 20.\n",
+        "La matriz se llama Ubicación. Finalmente quiero que usando column stack me una las matrices y las listas creadas. Defina la semilla aleatoria en 42."
+      ],
       "metadata": {
         "id": "yDFb34CTYaww"
       },
