Se creó con Colab

--- a/EDA_Apuntes_de_Clase.ipynb
+++ b/EDA_Apuntes_de_Clase.ipynb
@@ -8774,15 +8774,126 @@
     {
       "cell_type": "code",
       "source": [
-        "Creame 2 arreglos y matriz, el primero llamado saldo, que contiene datos sintéticos del saldo bancario, otro arreglo llamado antiguedad que contiene datos de la antiguedad de la cuenta bancaria de 0 a 10, una matriz de dos\n",
-        "columnas que contiene la latitud en la columna 0, y la longitud en la columna 1, con datos muy cercanos a Bucaramanga, es decir que varie la latitud y longitud en decimales o centecimales. El número de datos son 20.\n",
-        "La matriz se llama Ubicación. Finalmente quiero que usando column stack me una las matrices y las listas creadas. Defina la semilla aleatoria en 42."
+        "# prompt: Créame 2 arreglos y matriz, el primero llamado saldo, que contiene datos sintéticos del saldo bancario, otro arreglo llamado antiguedad que contiene datos de la antiguedad de la cuenta bancaria de 0 a 10, dos arreglos enteros, una matriz de dos columnas que contiene la latitud en la columna 0, y la longitud en la columna 1, con datos muy cercanos a Bucaramanga, es decir que varie la latitud y longitud en decimales o centecimales. El número de datos son 20. La matriz se llama Ubicación. Finalmente quiero que usando column stack me una las matrices y las listas creadas. Defina la semilla aleatoria en 42.\n",
+        "\n",
+        "import numpy as np\n",
+        "\n",
+        "# Set random seed\n",
+        "np.random.seed(42)\n",
+        "\n",
+        "# Create saldo array\n",
+        "saldo = np.random.randint(1000, 100000, size=20)\n",
+        "\n",
+        "# Create antiguedad array\n",
+        "antiguedad = np.random.randint(0, 11, size=20)\n",
+        "\n",
+        "# Create Ubicación matrix (latitude and longitude near Bucaramanga)\n",
+        "# Bucaramanga approximate coordinates: 7.125° N, 73.116° W\n",
+        "latitud = np.random.uniform(7.10, 7.15, size=20)  # Latitude variation\n",
+        "longitud = np.random.uniform(-73.13, -73.10, size=20)  # Longitude variation\n",
+        "\n",
+        "ubicacion = np.column_stack((latitud, longitud))\n",
+        "\n",
+        "# Stack arrays and matrix using column_stack\n",
+        "data = np.column_stack((saldo, antiguedad, ubicacion))\n",
+        "\n",
+        "print(\"Saldo:\\n\", saldo)\n",
+        "print(\"\\nAntiguedad:\\n\", antiguedad)\n",
+        "print(\"\\nUbicación:\\n\", ubicacion)\n",
+        "print(\"\\nDatos combinados:\\n\", data)\n"
       ],
       "metadata": {
-        "id": "yDFb34CTYaww"
+        "id": "2ugFOOMoGLQT",
+        "outputId": "cd079d27-551b-4fe2-cbcc-9e20c10c15a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saldo:\n",
+            " [16795  1860 77820 55886  7265 83386 38194 88498 45131 61263 17023 42090\n",
+            " 68221 65820  1769 60735 63955 65925 68969  6311]\n",
+            "\n",
+            "Antiguedad:\n",
+            " [ 4  0  9  5  8  0 10 10  9  2  6  3  8  2  4  2  6  4  8  6]\n",
+            "\n",
+            "Ubicación:\n",
+            " [[  7.10066325 -73.11814549]\n",
+            " [  7.14711009 -73.10220023]\n",
+            " [  7.12816441 -73.10818184]\n",
+            " [  7.11927083 -73.12020378]\n",
+            " [  7.10079831 -73.11288668]\n",
+            " [  7.11154469 -73.11437497]\n",
+            " [  7.11205127 -73.10116484]\n",
+            " [  7.13416318 -73.10466398]\n",
+            " [  7.13049983 -73.1075804 ]\n",
+            " [  7.14165975 -73.11380924]\n",
+            " [  7.10866823 -73.11239747]\n",
+            " [  7.11955303 -73.10104234]\n",
+            " [  7.1091118  -73.11178897]\n",
+            " [  7.13776807 -73.12172002]\n",
+            " [  7.12125779 -73.12111179]\n",
+            " [  7.11039708 -73.12504199]\n",
+            " [  7.12838502 -73.12953091]\n",
+            " [  7.10156566 -73.11729796]\n",
+            " [  7.14211424 -73.11815355]\n",
+            " [  7.12248771 -73.12119535]]\n",
+            "\n",
+            "Datos combinados:\n",
+            " [[ 1.67950000e+04  4.00000000e+00  7.10066325e+00 -7.31181455e+01]\n",
+            " [ 1.86000000e+03  0.00000000e+00  7.14711009e+00 -7.31022002e+01]\n",
+            " [ 7.78200000e+04  9.00000000e+00  7.12816441e+00 -7.31081818e+01]\n",
+            " [ 5.58860000e+04  5.00000000e+00  7.11927083e+00 -7.31202038e+01]\n",
+            " [ 7.26500000e+03  8.00000000e+00  7.10079831e+00 -7.31128867e+01]\n",
+            " [ 8.33860000e+04  0.00000000e+00  7.11154469e+00 -7.31143750e+01]\n",
+            " [ 3.81940000e+04  1.00000000e+01  7.11205127e+00 -7.31011648e+01]\n",
+            " [ 8.84980000e+04  1.00000000e+01  7.13416318e+00 -7.31046640e+01]\n",
+            " [ 4.51310000e+04  9.00000000e+00  7.13049983e+00 -7.31075804e+01]\n",
+            " [ 6.12630000e+04  2.00000000e+00  7.14165975e+00 -7.31138092e+01]\n",
+            " [ 1.70230000e+04  6.00000000e+00  7.10866823e+00 -7.31123975e+01]\n",
+            " [ 4.20900000e+04  3.00000000e+00  7.11955303e+00 -7.31010423e+01]\n",
+            " [ 6.82210000e+04  8.00000000e+00  7.10911180e+00 -7.31117890e+01]\n",
+            " [ 6.58200000e+04  2.00000000e+00  7.13776807e+00 -7.31217200e+01]\n",
+            " [ 1.76900000e+03  4.00000000e+00  7.12125779e+00 -7.31211118e+01]\n",
+            " [ 6.07350000e+04  2.00000000e+00  7.11039708e+00 -7.31250420e+01]\n",
+            " [ 6.39550000e+04  6.00000000e+00  7.12838502e+00 -7.31295309e+01]\n",
+            " [ 6.59250000e+04  4.00000000e+00  7.10156566e+00 -7.31172980e+01]\n",
+            " [ 6.89690000e+04  8.00000000e+00  7.14211424e+00 -7.31181536e+01]\n",
+            " [ 6.31100000e+03  6.00000000e+00  7.12248771e+00 -7.31211954e+01]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "datos_combinados.shape"
+      ],
+      "metadata": {
+        "id": "6X7aeAnLG--r",
+        "outputId": "ed236ab8-5025-45a5-f366-5e68e5e5912d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(20, 4)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     }
   ]
 }
