Se creó con Colab

--- a/EDA_Apuntes_de_Clase.ipynb
+++ b/EDA_Apuntes_de_Clase.ipynb
@@ -12149,12 +12149,12 @@
         "dfc"
       ],
       "metadata": {
-        "id": "qOL_jqSIeJyk",
-        "outputId": "20dc4075-d674-4c7e-a108-25da3aa6ef65",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 363
-        }
+        },
+        "id": "qOL_jqSIeJyk",
+        "outputId": "20dc4075-d674-4c7e-a108-25da3aa6ef65"
       },
       "execution_count": 2,
       "outputs": [
@@ -12560,11 +12560,11 @@
         "nulos.values/total*100"
       ],
       "metadata": {
-        "id": "wWnUN9TnjkPd",
-        "outputId": "a843366d-261e-4899-adba-bcae356b1d68",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wWnUN9TnjkPd",
+        "outputId": "a843366d-261e-4899-adba-bcae356b1d68"
       },
       "execution_count": 6,
       "outputs": [
@@ -12591,12 +12591,12 @@
         "df"
       ],
       "metadata": {
-        "id": "4CKfzM4-kkpV",
-        "outputId": "6ca5de5b-e2bd-417f-a64a-4af52dc939d5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 363
-        }
+        },
+        "id": "4CKfzM4-kkpV",
+        "outputId": "6ca5de5b-e2bd-417f-a64a-4af52dc939d5"
       },
       "execution_count": 7,
       "outputs": [
@@ -12989,12 +12989,12 @@
         "dfc"
       ],
       "metadata": {
-        "id": "WiFAjbvLpxSh",
-        "outputId": "3f053575-28e3-4d7b-c7e7-75cb9788240e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 175
-        }
+        },
+        "id": "WiFAjbvLpxSh",
+        "outputId": "3f053575-28e3-4d7b-c7e7-75cb9788240e"
       },
       "execution_count": 8,
       "outputs": [
@@ -13353,12 +13353,12 @@
         "dfc"
       ],
       "metadata": {
-        "id": "k27j_Gevpz8Q",
-        "outputId": "c311c85f-8d8a-4016-b009-9f32df46d7bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 589
-        }
+        },
+        "id": "k27j_Gevpz8Q",
+        "outputId": "c311c85f-8d8a-4016-b009-9f32df46d7bb"
       },
       "execution_count": 9,
       "outputs": [
@@ -13775,12 +13775,12 @@
         "df['Género'].mode()[0]"
       ],
       "metadata": {
-        "id": "RVwF6bRAp2Ug",
-        "outputId": "97a44169-f2e5-493c-a3b6-d210dd9ac271",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "RVwF6bRAp2Ug",
+        "outputId": "97a44169-f2e5-493c-a3b6-d210dd9ac271"
       },
       "execution_count": 10,
       "outputs": [
@@ -13807,12 +13807,12 @@
         "df"
       ],
       "metadata": {
-        "id": "GvSslBGQp7KI",
-        "outputId": "03078864-d41f-42e4-ab14-c7da2ecc95df",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 363
-        }
+        },
+        "id": "GvSslBGQp7KI",
+        "outputId": "03078864-d41f-42e4-ab14-c7da2ecc95df"
       },
       "execution_count": 11,
       "outputs": [
@@ -14213,12 +14213,12 @@
         "dfc.isnull().sum()"
       ],
       "metadata": {
-        "id": "LWh64cKxp-eR",
-        "outputId": "5f9da313-1926-450b-c545-9f609aebc9e0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 369
-        }
+        },
+        "id": "LWh64cKxp-eR",
+        "outputId": "5f9da313-1926-450b-c545-9f609aebc9e0"
       },
       "execution_count": 12,
       "outputs": [
@@ -14305,12 +14305,12 @@
         "dfc"
       ],
       "metadata": {
-        "id": "T9lM46NXqAlg",
-        "outputId": "faff6e57-7df5-4150-e884-d419491d2c93",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 363
-        }
+        },
+        "id": "T9lM46NXqAlg",
+        "outputId": "faff6e57-7df5-4150-e884-d419491d2c93"
       },
       "execution_count": 13,
       "outputs": [
@@ -14693,6 +14693,138 @@
           },
           "metadata": {},
           "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Pregunta examen: Cuándo usted aplica multiconalidad, qué significa?\n",
+        "Que hay columnas redundantes, cuando se usa One-Hot Encoding"
+      ],
+      "metadata": {
+        "id": "F3CeJPCwuUXO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Dataset simulado\n",
+        "data = {\n",
+        "    \"ID\": [1, 2, 3, 4, 5],\n",
+        "    \"Ciudad\": [\"Madrid\", \"Barcelona\", \"Sevilla\", \"Madrid\", \"Valencia\"],  # Nominal\n",
+        "    \"Educación\": [\"Secundaria\", \"Primaria\", \"Universitaria\", \"Primaria\", \"Universitaria\"],  # Ordinal\n",
+        "    \"Género\": [\"F\", \"M\", \"F\", \"M\", \"F\"],  # Nominal\n",
+        "}\n",
+        "df = pd.DataFrame(data)\n",
+        "print(\"Dataset original:\")\n",
+        "print(df)\n"
+      ],
+      "metadata": {
+        "id": "lW6-gGkFyanS",
+        "outputId": "b76dec4a-6ded-422f-c13d-44bba66cef04",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dataset original:\n",
+            "   ID     Ciudad      Educación Género\n",
+            "0   1     Madrid     Secundaria      F\n",
+            "1   2  Barcelona       Primaria      M\n",
+            "2   3    Sevilla  Universitaria      F\n",
+            "3   4     Madrid       Primaria      M\n",
+            "4   5   Valencia  Universitaria      F\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Usando get_dummies para One-Hot Encoding\n",
+        "df_onehot = pd.get_dummies(df, columns=[\"Ciudad\"], prefix=\"Ciudad\")\n",
+        "print(\"\\nCodificación One-Hot para 'Ciudad':\")\n",
+        "print(df_onehot)"
+      ],
+      "metadata": {
+        "id": "tYgXBfw1yeGR",
+        "outputId": "8f0d7cce-c897-4c47-d4dd-5c49bfabc3bf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Codificación One-Hot para 'Ciudad':\n",
+            "   ID      Educación Género  Ciudad_Barcelona  Ciudad_Madrid  Ciudad_Sevilla  \\\n",
+            "0   1     Secundaria      F             False           True           False   \n",
+            "1   2       Primaria      M              True          False           False   \n",
+            "2   3  Universitaria      F             False          False            True   \n",
+            "3   4       Primaria      M             False           True           False   \n",
+            "4   5  Universitaria      F             False          False           False   \n",
+            "\n",
+            "   Ciudad_Valencia  \n",
+            "0            False  \n",
+            "1            False  \n",
+            "2            False  \n",
+            "3            False  \n",
+            "4             True  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "\n",
+        "\n",
+        "# Configuración del codificador\n",
+        "miencoder = OneHotEncoder(sparse_output=False)  # Cambiado de sparse a sparse_output\n",
+        "ciudad_onehot_encoded = miencoder.fit_transform(df[[\"Ciudad\"]])\n",
+        "\n",
+        "# Crear un DataFrame con los resultados\n",
+        "onehot_df = pd.DataFrame(ciudad_onehot_encoded, columns=miencoder.get_feature_names_out([\"Ciudad\"]))\n",
+        "print(\"\\nCodificación One-Hot con Scikit-learn:\")\n",
+        "print(onehot_df)"
+      ],
+      "metadata": {
+        "id": "OMkx1mkWygoc",
+        "outputId": "6d2c9d66-85b3-4007-bc1f-5f290d4e2418",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Codificación One-Hot con Scikit-learn:\n",
+            "   Ciudad_Barcelona  Ciudad_Madrid  Ciudad_Sevilla  Ciudad_Valencia\n",
+            "0               0.0            1.0             0.0              0.0\n",
+            "1               1.0            0.0             0.0              0.0\n",
+            "2               0.0            0.0             1.0              0.0\n",
+            "3               0.0            1.0             0.0              0.0\n",
+            "4               0.0            0.0             0.0              1.0\n"
+          ]
         }
       ]
     }
