Se creó con Colab

--- a/EDA_Apuntes_de_Clase.ipynb
+++ b/EDA_Apuntes_de_Clase.ipynb
@@ -12156,7 +12156,7 @@
         "id": "qOL_jqSIeJyk",
         "outputId": "20dc4075-d674-4c7e-a108-25da3aa6ef65"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12549,7 +12549,7 @@
       "metadata": {
         "id": "7scGpcPojc4-"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -12566,7 +12566,7 @@
         "id": "wWnUN9TnjkPd",
         "outputId": "a843366d-261e-4899-adba-bcae356b1d68"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12598,7 +12598,7 @@
         "id": "4CKfzM4-kkpV",
         "outputId": "6ca5de5b-e2bd-417f-a64a-4af52dc939d5"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12996,7 +12996,7 @@
         "id": "WiFAjbvLpxSh",
         "outputId": "3f053575-28e3-4d7b-c7e7-75cb9788240e"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -13360,7 +13360,7 @@
         "id": "k27j_Gevpz8Q",
         "outputId": "c311c85f-8d8a-4016-b009-9f32df46d7bb"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13782,7 +13782,7 @@
         "id": "RVwF6bRAp2Ug",
         "outputId": "97a44169-f2e5-493c-a3b6-d210dd9ac271"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -13814,7 +13814,7 @@
         "id": "GvSslBGQp7KI",
         "outputId": "03078864-d41f-42e4-ab14-c7da2ecc95df"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -14220,7 +14220,7 @@
         "id": "LWh64cKxp-eR",
         "outputId": "5f9da313-1926-450b-c545-9f609aebc9e0"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -14312,7 +14312,7 @@
         "id": "T9lM46NXqAlg",
         "outputId": "faff6e57-7df5-4150-e884-d419491d2c93"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -14731,7 +14731,7 @@
         "id": "lW6-gGkFyanS",
         "outputId": "b76dec4a-6ded-422f-c13d-44bba66cef04"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -14763,7 +14763,7 @@
         "id": "tYgXBfw1yeGR",
         "outputId": "8f0d7cce-c897-4c47-d4dd-5c49bfabc3bf"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -14810,7 +14810,7 @@
         "id": "OMkx1mkWygoc",
         "outputId": "6d2c9d66-85b3-4007-bc1f-5f290d4e2418"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -14827,6 +14827,87 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import streamlit as st\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "import joblib\n",
+        "from PIL import Image\n",
+        "\n",
+        "# Cargar el modelo y el codificador\n",
+        "model = joblib.load('miprimermillon.joblib')\n",
+        "cabello_encoder = joblib.load('cabello_encoder.joblib')\n",
+        "\n",
+        "# Título y subheader\n",
+        "st.title(\"Ejemplo IA predecir el Género\")\n",
+        "st.subheader(\"By Ralph Castellanos\")\n",
+        "\n",
+        "# Instrucciones y objetivo\n",
+        "st.markdown(\"\"\"\n",
+        "    **Instrucciones de uso:**\n",
+        "    1. Ajusta las variables usando los controles disponibles.\n",
+        "    2. Selecciona el tipo de cabello: \"Corto\" o \"Largo\".\n",
+        "    3. Las demás variables, como Edad, Peso, Altura y Talla, se ajustan con sliders.\n",
+        "    4. La predicción del género se mostrará debajo de los controles.\n",
+        "\n",
+        "    **Objetivo del proyecto:**\n",
+        "    Predecir el género de una persona (Masculino o Femenino) en base a variables físicas.\n",
+        "\"\"\")\n",
+        "\n",
+        "# Cargar y mostrar la imagen principal\n",
+        "st.image(\"hombremujer.jpg\", use_column_width=True)\n",
+        "\n",
+        "# Sidebar para ingresar datos\n",
+        "st.sidebar.header(\"Ingresar características\")\n",
+        "\n",
+        "# Variables de entrada\n",
+        "edad = st.sidebar.slider(\"Edad\", 18, 30, 20)\n",
+        "peso = st.sidebar.slider(\"Peso\", 40, 110, 60)\n",
+        "altura = st.sidebar.slider(\"Altura\", 120, 200, 170)\n",
+        "talla = st.sidebar.slider(\"Talla\", 30, 48, 40)\n",
+        "\n",
+        "# Selector para cabello\n",
+        "cabello = st.sidebar.selectbox(\"Tipo de Cabello\", options=[\"Corto\", \"Largo\"])\n",
+        "\n",
+        "# Convertir el cabello en valor numérico\n",
+        "cabello_encoded = cabello_encoder.transform([cabello])[0]\n",
+        "\n",
+        "# Preparar el dataframe con los datos ingresados\n",
+        "input_data = pd.DataFrame({\n",
+        "    'Edad': [edad],\n",
+        "    'Peso': [peso],\n",
+        "    'Altura': [altura],\n",
+        "    'Cabello': [cabello_encoded],\n",
+        "    'Talla': [talla]\n",
+        "})\n",
+        "\n",
+        "# Realizar la predicción\n",
+        "prediccion = model.predict(input_data)\n",
+        "\n",
+        "# Subtítulo de la predicción\n",
+        "st.subheader(\"Predicción\")\n",
+        "st.markdown(\"---\")\n",
+        "\n",
+        "# Mostrar imagen según la predicción\n",
+        "if prediccion == 1:\n",
+        "    st.image(\"Masculino.jpg\", use_container_width=True)\n",
+        "else:\n",
+        "    st.image(\"Femenino.jpg\", use_container_width=True)\n",
+        "\n",
+        "# Línea de separación y texto final\n",
+        "st.markdown(\"---\")\n",
+        "st.markdown(\"UNAB-2025\")"
+      ],
+      "metadata": {
+        "id": "SlKnLs0AiEKy"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
