Se creó con Colab

--- a/EDA_Apuntes_de_Clase.ipynb
+++ b/EDA_Apuntes_de_Clase.ipynb
@@ -19623,6 +19623,164 @@
       "metadata": {
         "id": "x-GU-OZvYzf9"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Pregunta quiz: Qué es la vista minable? Son los datos listos, preprocesados, normalizados, imputados, etc. que ya están listos para entrenar un proyecto."
+      ],
+      "metadata": {
+        "id": "DZXptZiAaybs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "axis=0 borra filas, axis=1 borra las columnas"
+      ],
+      "metadata": {
+        "id": "6stoMgd7iJzO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import kagglehub\n",
+        "\n",
+        "# Download latest version\n",
+        "path = kagglehub.dataset_download(\"akshaydattatraykhare/diabetes-dataset\")\n",
+        "\n",
+        "print(\"Path to dataset files:\", path)"
+      ],
+      "metadata": {
+        "id": "38wA6O08kb8R"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df=pd.read_csv(path+\"/diabetes.csv\")"
+      ],
+      "metadata": {
+        "id": "1QZs3HZTkcdK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df"
+      ],
+      "metadata": {
+        "id": "j0NLIggqkd8a"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.describe().T"
+      ],
+      "metadata": {
+        "id": "88TmDEekketC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Del dataframe voy a verificiar la columna outcome (el label) si están balanceados o no\n",
+        "df[\"Outcome\"].value_counts()\n",
+        "\n",
+        "#Qué porcentaje tiene el 0 y el 1?\n",
+        "df[\"Outcome\"].value_counts(normalize=True)*100"
+      ],
+      "metadata": {
+        "id": "ms2dJdiRkmWi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import seaborn as sns\n",
+        "#Voy a gráficar la bar df.outcome\n",
+        "sns.countplot(x=df[\"Outcome\"])"
+      ],
+      "metadata": {
+        "id": "GP72VcVgkn-S"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#voy a balacear los datos de df usando la columna Outcome, vamos a usar SMOTE, con oversampling.\n",
+        "from imblearn.over_sampling import SMOTE\n",
+        "smote=SMOTE()"
+      ],
+      "metadata": {
+        "id": "hjsmO7etkpwK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.shape"
+      ],
+      "metadata": {
+        "id": "g7LKZkNFkrW5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sns.countplot(x=y)"
+      ],
+      "metadata": {
+        "id": "tRMBb_0oksqZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X=df.drop(\"Outcome\",axis=1)\n",
+        "y=df[\"Outcome\"]\n",
+        "X,y=smote.fit_resample(X,y)"
+      ],
+      "metadata": {
+        "id": "8PR_wW29kuKa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X.shape"
+      ],
+      "metadata": {
+        "id": "Qq9FLkd4kvmQ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
