Se creó con Colab

--- a/EDA_Apuntes_de_Clase.ipynb
+++ b/EDA_Apuntes_de_Clase.ipynb
@@ -21849,7 +21849,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Leer el cuaderno de SVM"
+        "Leer la parte 8.4 del cuaderno 8"
       ],
       "metadata": {
         "id": "Wf6WDUIFfb4H"
